<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_red_circle" android:title="@string/REC" android:icon="@drawable/red_circle" app:showAsAction="never" android:visible="false"/>
    <item android:id="@+id/action_active_feedback" android:title="@string/action_active_feedback"
        android:icon="@drawable/plus_sign"
        app:showAsAction="never" />
    <item android:id="@+id/action_settingss" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/generate_report"
        app:showAsAction="never" />
</menu>
