<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_stress">

    <fragment
        android:id="@+id/nav_home"
        android:name="cn.edu.cdut.navidemo3.ui.home.HomeFragment"
        android:label="@string/menu_datacollection"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="cn.edu.cdut.navidemo3.ui.gallery.GalleryFragment"
        android:label="@string/menu_trackmap"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="cn.edu.cdut.navidemo3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_record"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_stress"
        android:name="cn.edu.cdut.navidemo3.ui.stress.PressureScrollingFragment"
        android:label="@string/menu_stress"
        tools:layout="@layout/fragment_pressure_scrolling" />

    <fragment
        android:id="@+id/nav_summary"
        android:name="cn.edu.cdut.navidemo3.SummaryFragment"
        android:label="@string/menu_summary"
        tools:layout="@layout/fragment_summary" />

</navigation>