<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:clickable="false"
        tools:context=".ui.stress.PressureScrollingFragment"
        android:orientation="vertical">

<!--    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/large_text" />-->
    <LinearLayout
        android:id="@+id/history_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/light_blue_600"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_previous_day_in_history_header"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_history" />

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_history_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="Date Header Here"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_basic_time_unit" />

                <Spinner
                    android:id="@+id/spinner_time_unit_in_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#8800CC" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_next_day_in_history_header"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_history" />

    </LinearLayout>


        <ListView
            android:id="@+id/listview_history_items"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"/>


    <Button
        android:id="@+id/btn_savelables"
        android:text="@string/btn_savelables"
        android:layout_gravity="bottom|right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>


    <Button
        android:id="@+id/btn_uploadlables"
        android:text="@string/btn_uploadlables"
        android:layout_gravity="bottom|right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
</LinearLayout>

